<resources>
    <string name="app_name">Movies App</string>
    <string name="menu_home">Home</string>
    <string name="menu_edit">Edit profile</string>
    <string name="menu_dark_theme">Dark Theme</string>
    <string name="menu_tv_show">TV Shows</string>
    <string name="menu_movie">Movies</string>
    <string name="menu_sport">Sports</string>
    <string name="menu_tv">Live TV</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_language">Language</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="name_login">Name</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="phone_login">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="no_account">Don\'t Have an Account? </string>
    <string name="sign_up">Register</string>
    <string name="register">Register</string>
    <string name="already_account">Already Have an Account? </string>
    <string name="forgot_description">Enter your email address below and  we\'ll send you email with password</string>
    <string name="button_text_forgot_password">Forgot your password?</string>
    <string name="please_enter_email">Enter your email</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="skip">Skip</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">2.0</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">Movie App</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">info@admin.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.google.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+91 (123) (456) (5678)</string>
    <string name="about_us_about">About</string>
    <string name="enable_push">Push Notification</string>
    <string name="rate_app">Rate Us</string>
    <string name="more_app">More Apps</string>
    <string name="share_app">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="profile_name_hint">Enter Name</string>
    <string name="profile_email_hint">Enter Email</string>
    <string name="profile_password_hint">Enter Password</string>
    <string name="profile_phone_hint">Enter Phone</string>
    <string name="profile_address_hint">Enter Address</string>
    <string name="save">Save</string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="subscription_msg">Full access to all free and premium content with download also. choose plan based on your usage. Below there are plan name,price and validity days. for explore select free plan.</string>
    <string name="select_subscription_plan">Select Your Subscription Plan</string>
    <string name="subscription_proceed">PROCEED</string>
    <string name="user_info">User Information</string>
    <string name="choose_plan">You have selected</string>
    <string name="choose_plan_1">You are logged in as</string>
    <string name="choose_plan_2">If you would like to use a </string>
    <string name="choose_plan_3">Different account for this subscription, </string>
    <string name="choose_plan_4">Logout</string>
    <string name="choose_plan_5">Now.</string>
    <string name="change_plan">Change Plan</string>
    <string name="payment_option">Payment Option</string>
    <string name="paypal">PayPal</string>
    <string name="stripe">Stripe</string>
    <string name="razor_pay">RazorPay</string>
    <string name="pay_stack">PayStack</string>
    <string name="selcom">Selcom</string>
    <string name="flutterwave">Flutterwave</string>
    <string name="plan_day_for">For %s</string>
    <string name="no_payment_gateway">There is currently not any payment gateway is available so Please choose Free Plan. </string>
    <string name="select_gateway">Please select any one of them payment options</string>
    <string name="paypal_display_website">http://google.com/</string>
    <string name="razor_pay_company">Movie App</string>
    <string name="stripe_token_error">Some error occurred when generating stripe token</string>
    <string name="isRTL">false</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="isPremium">Premium</string>
    <string name="no_item_found">No Item Found</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="conne_msg1">No Network Connection!!!</string>
    <string name="loading">Loading</string>
    <string name="watch_now">Watch Now</string>
    <string name="back_key">Please click BACK again to exit</string>
    <string name="filter">Filter</string>
    <string name="filter_newest">Newest</string>
    <string name="filter_oldest">Oldest</string>
    <string name="filter_alpha">A to Z</string>
    <string name="filter_random">Random</string>
    <string name="duration">Duration:</string>
    <string name="language_details">Language:</string>
    <string name="category_details">Category:</string>
    <string name="genre_detail">Genre:</string>
    <string name="related_movie">Related Movies</string>
    <string name="related_sport">Related Sport</string>
    <string name="related_show">Related Shows</string>
    <string name="related_tv">Related TV</string>
    <string name="see_all">SEE ALL</string>
    <string name="no_episode_found">No Episode Found</string>
    <string name="share_msg">Download it from Google Play Store Free Here \n https://play.google.com/store/apps/details?id=</string>
    <string name="play_more_apps">https://play.google.com/store/apps</string>
    <string name="view_all">See All</string>
    <string name="invalid_license">Invalid License</string>
    <string name="license_msg">You are using invalid License or Package name is already in use, for more information contact us: </string>
    <string name="something_went">Something went wrong please restart application</string>
    <string name="user_disable">Admin was disable or deleted you as user</string>
    <string name="home_recently_watched">Recently Watched</string>
    <string name="home_latest_movie">Latest Movies</string>
    <string name="home_latest_show">Latest Shows</string>
    <string name="home_popular_movie">Popular Movies</string>
    <string name="home_popular_show">Popular Shows</string>
    <string name="edit">Edit Profile</string>
    <string name="my_subscription">Current Membership Plan</string>
    <string name="current_plan">Current Plan : %s</string>
    <string name="expire_on">Subscription expires on  %s</string>
    <string name="upgrade_plan">Upgrade Membership Plan</string>
    <string name="last_invoice">Transaction</string>
    <string name="last_invoice_date">Date : %s</string>
    <string name="last_invoice_plan">Plan : %s</string>
    <string name="last_invoice_amount">Amount : %s</string>
    <string name="n_a">N/A</string>
    <string name="pay_via">Pay : %s %s via %s</string>
    <string name="payment">Payment</string>
    <string name="paypal_payment_error_1">an extremely unlikely failure occurred</string>
    <string name="paypal_payment_error_2">The user canceled.</string>
    <string name="paypal_payment_error_3">An invalid Payment was submitted</string>
    <string name="paypal_payment_error_4">Paypal failure</string>
    <string name="razor_payment_error_1">Razor Pay failure</string>
    <string name="pay_stack_error_1">PayStack failure</string>
    <string name="stripe_payment_error_1">Stripe failure</string>
    <string name="try_again">Try Again</string>
    <string name="stream_not_found">Unfortunately stream url does not found please report it</string>
    <string name="download_not_found">Unfortunately download url does not found please report it</string>
    <string name="premium">Premium </string>
    <string name="premium_content">For Access Please kindly purchase subscription to watch this content or LOGIN with premium account. </string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="privacy_url">http://google.com</string>
    <string name="default_notification_channel_id">TLX Movies</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="youtube_api_key">AIzaSyAYJwy6nzCFVBbprw</string> <!-- Put Your Youtube Api Key -->
    <string name="login_first">You need to login first for purchasing premium content</string>
    <string name="download">Download</string>
    <string name="invalid_download">Download url does not supported.</string>
    <string name="player_setting">Setting</string>
    <string name="quality">Quality</string>
    <string name="quality_default">default</string>
    <string name="quality_420p">420p</string>
    <string name="quality_720p">720p</string>
    <string name="quality_1080p">1080p</string>
    <string name="sub_titles">Subtitles</string>
    <string name="off_sub_title">OFF</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_gmail">Login with Google</string>
    <string name="facebook_app_id">191392074808179</string>
    <string name="fb_login_protocol_scheme">fb191392074808179</string>
    <string name="casty_introduction_text">Use this button to connect with Chromecast</string>
    <string name="cast_youtube">Youtube and Embedded link direct does not cast</string>
    <string name="cast_play_custom">Playing in Connected Chromecast</string>
    <string name="play_on_cast">Play on Cast</string>
    <string name="perks1">•  Unlimited streaming</string>
    <string name="perks2">•  Download your favorite movies</string>
    <string name="perks3">•  Stream in high definition</string>
</resources>
