<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_go_home"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:exb_color="@color/highlight"/>

    <item
        android:id="@+id/menu_go_movie"
        android:checked="false"
        android:icon="@drawable/ic_movie"
        android:title="@string/menu_movie"
        app:exb_color="@color/highlight"/>

    <item
        android:id="@+id/menu_language"
        android:checked="false"
        android:icon="@drawable/ic_language"
        android:title="@string/menu_language"
        app:exb_color="@color/highlight"/>

    <item
        android:id="@+id/menu_go_dashboard"
        android:checked="false"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/menu_dashboard"
        app:exb_color="@color/highlight"/>

    <item
        android:id="@+id/menu_go_setting"
        android:checked="false"
        android:icon="@drawable/ic_setting"
        android:title="@string/menu_setting"
        app:exb_color="@color/highlight"/>
</menu>