<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <com.tuyenmonkey.mkloader.MKLoader
        android:id="@+id/progressBar1"
        app:mk_type="Whirlpool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lyt_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_no_item"
            app:tint="@color/not_found_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_item_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/not_found_color" />
    </LinearLayout>

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/cander_row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/imageAvtar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@drawable/circle_drawable"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/user_icon" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="12dp"
                android:textColor="@color/text"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:text="John Wick" />

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginTop="12dp"
                android:background="#12000000" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/profile_text" />

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/profile_name_hint"
                    android:inputType="textPersonName"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textColorHint="@color/edittext_hint"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/divider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/profile_text" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/profile_email_hint"
                    android:inputType="textEmailAddress"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textColorHint="@color/edittext_hint"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/divider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/profile_text" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/profile_password_hint"
                    android:inputType="textPassword"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textColorHint="@color/edittext_hint"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/divider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/profile_text" />

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/profile_phone_hint"
                    android:inputType="phone"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textColorHint="@color/edittext_hint"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/divider" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/profile_text" />

                <EditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/profile_address_hint"
                    android:inputType="textPostalAddress"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textColorHint="@color/edittext_hint"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/divider" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_submit"
                    android:layout_width="149dp"
                    android:layout_height="60dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="35dp"
                    android:text="@string/save"
                    android:textColor="@color/btn_text_color"
                    android:textSize="16sp"
                    app:backgroundTint="@color/highlight"
                    app:cornerRadius="@dimen/btnRadius"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40333333"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.tuyenmonkey.mkloader.MKLoader
            android:id="@+id/progressBar"
            app:mk_type="Whirlpool"
            app:mk_color="@color/highlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

</RelativeLayout>