<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/cander_row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <com.tuyenmonkey.mkloader.MKLoader
        android:id="@+id/progressBar1"
        app:mk_type="Whirlpool"
        app:mk_color="@color/highlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/lyt_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_no_item"
            app:tint="@color/not_found_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_item_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/not_found_color" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity=""
                android:orientation="vertical">

                <com.github.siyamed.shapeimageview.CircularImageView
                    android:id="@+id/imageAvtar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/app_name"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="30dp"
                    android:includeFontPadding="false"
                    android:text="@string/app_name"
                    android:textColor="@color/maingray"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="-150dp"
                    android:background="@drawable/highlight_round_btn"
                    android:includeFontPadding="false"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/edit"
                    android:textColor="@color/real_white"
                    android:textSize="15sp" />


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:text="@string/my_subscription"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/plan_normal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textCurrentPlan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:includeFontPadding="false"
                        android:text="@string/current_plan"
                        android:textColor="@color/white"
                        android:textSize="15sp" />


                    <TextView
                        android:id="@+id/textExpiresOn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:includeFontPadding="false"
                        android:text="@string/expire_on"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/changePlan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/highlight_round_btn"
                        android:includeFontPadding="false"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/upgrade_plan"
                        android:textColor="@color/real_white"
                        android:textSize="15sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/last_invoice"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/plan_normal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textLsDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:includeFontPadding="false"
                        android:text="@string/last_invoice_date"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textLsPlan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:includeFontPadding="false"
                        android:text="@string/last_invoice_plan"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textLsAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:includeFontPadding="false"
                        android:text="@string/last_invoice_amount"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>